# CodedPaddedFL-and-CodedSecAgg-Straggler-Mitigation-and-Secure-Aggregation-in-Federated-Learning

./: README.md
MNIST_intel_minibatch/: Cargo.toml
MNIST_intel_minibatch/data/: README.md
MNIST_intel_minibatch/src/: main.rs
fully_private_CFL/: Cargo.toml
fully_private_CFL/src/: field_arithmetic.rs  main.rs
light_sec_agg/: Cargo.toml
light_sec_agg/data/: README.md
light_sec_agg/src/: main.rs
