[package]
name = "MNIST_intel_minibatch"
version = "0.1.0"
authors = ["reent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
rand = "0.7"
rand_distr = "0.3.0"
rayon = "1.4.0"
statrs = "*"
mnist = "*"
