[package]
name = "fully_private_cfl"
version = "0.1.0"
authors = ["ReentSchlegel <reent.schlegel@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "*"
rand = "*"
divisors = "*"
rayon = "0.9.0"